<resources>
    <string name="app_name">Kanaloa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Kanaloa</string>
    <string name="nav_header_subtitle">Travel blog assistant</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_joomla_settings">Joomla! settings</string>
    <string name="action_phpUpload_settings">Php upload settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="title_start">Start</string>
    <string name="title_stop">Stop</string>
    <string name="title_photo">Photo</string>

    <string name="how_often_to_update_location_in_seconds">How often to update location in seconds:</string>
    <string name="number_of_ticks">Number of ticks</string>
    <string name="open_battery_optimization">Open battery optimization</string>
    <string name="_30">30</string>
    <string name="pass">Pass</string>
    <string name="user">User</string>
    <string name="defaultHost">ftp.host.com</string>
    <string name="defaultFileName">default.kml</string>
    <string name="host">Host</string>
    <string name="saveSettings">Save settings</string>
    <string name="upload">Upload</string>
    <string name="menu_log">Log</string>
    <string name="log">Log</string>

    <string name="folderName">Folder name:</string>
    <string name="defaultFolder">default</string>
    <string name="fileName">File name:</string>
    <string name="ogTitle">OgTitle:</string>
    <string name="ogImage">OgImage:</string>
    <string name="baseUrl">BaseUrl:</string>
    <string name="deleteFirstKmlPoints">Delete first KML points</string>
    <string name="defaultDeleteFirstKmlPoints">100</string>
    <string name="deleteLastKmlPoints">Delete last KML points</string>
    <string name="defaultDeleteLastKmlPoints">100</string>

    <string name="joomla_category_id">Joomla! category id:</string>
    <string name="php_upload_url">Php upload URL:</string>
    <string name="php_upload_user_name">Php upload user name:</string>
    <string name="php_upload_pass">Php upload password:</string>
    <string name="joomla_login_url">Joomla! login url:</string>
    <string name="joomla_post_url">Joomla! post url:</string>
    <string name="joomla_user_name">Joomla! user name:</string>
    <string name="joomla_pass">Joomla! pass:</string>
    <string name="cancel">Cancel</string>
</resources>