<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.GalleryFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btnUpload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextBaseUrl"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/defaultFolder"
                android:inputType="textUri"
                android:textColorHint="#757575"
                app:layout_constraintEnd_toEndOf="@+id/editTextOgImage"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editTextOgImage"
                app:layout_constraintTop_toBottomOf="@+id/editTextOgImage" />

            <TextView
                android:id="@+id/textViewBaseUrl"
                android:layout_width="55dp"
                android:layout_height="21dp"
                android:text="@string/baseUrl"
                app:layout_constraintBottom_toBottomOf="@+id/editTextBaseUrl"
                app:layout_constraintEnd_toEndOf="@+id/textViewOgImage"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editTextBaseUrl"
                app:layout_constraintVertical_bias="0.481" />

            <EditText
                android:id="@+id/editTextDeleteFirstKmlPoints"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/defaultDeleteFirstKmlPoints"
                android:inputType="textUri"
                android:textColorHint="#757575"
                app:layout_constraintEnd_toEndOf="@+id/editTextBaseUrl"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editTextBaseUrl"
                app:layout_constraintTop_toBottomOf="@+id/editTextBaseUrl" />

            <TextView
                android:id="@+id/textViewDeleteFirstKmlPoints"
                android:layout_width="150dp"
                android:layout_height="21dp"
                android:text="@string/deleteFirstKmlPoints"
                app:layout_constraintBottom_toBottomOf="@+id/editTextDeleteFirstKmlPoints"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editTextDeleteFirstKmlPoints"
                app:layout_constraintVertical_bias="0.481" />

            <EditText
                android:id="@+id/editTextFileName"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_marginTop="108dp"
                android:layout_marginEnd="40dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/defaultFileName"
                android:inputType="text"
                android:textColorHint="#757575"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textViewFileName"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewFileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:text="@string/fileName"
                app:layout_constraintBottom_toBottomOf="@+id/editTextFileName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editTextFileName"
                app:layout_constraintVertical_bias="0.448" />

            <EditText
                android:id="@+id/editTextFolderName"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/defaultFolder"
                android:inputType="text"
                android:textColorHint="#757575"
                app:layout_constraintEnd_toEndOf="@+id/editTextFileName"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editTextFileName"
                app:layout_constraintTop_toBottomOf="@+id/editTextFileName" />

            <TextView
                android:id="@+id/textViewFolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/folderName"
                app:layout_constraintBottom_toBottomOf="@+id/editTextFolderName"
                app:layout_constraintEnd_toEndOf="@+id/textViewFileName"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editTextFolderName"
                app:layout_constraintVertical_bias="0.482" />

            <TextView
                android:id="@+id/textViewOgTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ogTitle"
                app:layout_constraintBottom_toBottomOf="@+id/editTextOgTitle"
                app:layout_constraintEnd_toEndOf="@+id/textViewFolder"
                app:layout_constraintHorizontal_bias="0.558"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editTextOgTitle"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/editTextOgTitle"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/defaultFolder"
                android:inputType="text"
                android:textColorHint="#757575"
                app:layout_constraintEnd_toEndOf="@+id/editTextFolderName"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editTextFolderName"
                app:layout_constraintTop_toBottomOf="@+id/editTextFolderName" />

            <TextView
                android:id="@+id/textViewOgImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ogImage"
                app:layout_constraintBottom_toBottomOf="@+id/editTextOgImage"
                app:layout_constraintEnd_toEndOf="@+id/textViewOgTitle"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editTextOgImage"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/editTextOgImage"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/defaultFolder"
                android:inputType="text"
                android:textColorHint="#757575"
                app:layout_constraintEnd_toEndOf="@+id/editTextOgTitle"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editTextOgTitle"
                app:layout_constraintTop_toBottomOf="@+id/editTextOgTitle" />

            <ImageView
                android:id="@+id/ivOgImage"
                android:layout_width="28dp"
                android:layout_height="44dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@android:drawable/sym_def_app_icon"
                android:text="@string/saveSettings"
                app:layout_constraintBottom_toBottomOf="@+id/editTextOgImage"
                app:layout_constraintEnd_toStartOf="@+id/editTextOgImage"
                app:layout_constraintStart_toEndOf="@+id/textViewOgImage"
                app:layout_constraintTop_toTopOf="@+id/editTextOgImage"
                tools:src="@android:drawable/ic_menu_gallery" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/upload"
        app:layout_constraintBottom_toTopOf="@id/btnSaveSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSaveSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/saveSettings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
